--- a/duckplayer/duckplayer-impl/build.gradle
+++ b/duckplayer/duckplayer-impl/build.gradle
@@ -25,10 +25,17 @@ apply from: "$rootProject.projectDir/gradle/android-library.gradle"
 
 dependencies {
 	implementation project(":duckplayer-api")
+    implementation project(':feature-toggles-api')
+    implementation project(':common-utils')
 
     anvil project(path: ':anvil-compiler')
     implementation project(path: ':anvil-annotations')
     implementation project(path: ':di')
+    implementation project(':content-scope-scripts-api')
+    implementation project(':app-build-config-api')
+    api AndroidX.dataStore.preferences
+
+
     ksp AndroidX.room.compiler
 
     implementation KotlinX.coroutines.android
