--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -248,6 +248,7 @@
 
                 <data android:scheme="https" />
                 <data android:scheme="http" />
+                <data android:scheme="duck" />
             </intent-filter>
 
             <!-- Allows app to handle the specified MIME types that use the specified schemes, and to become the default handler for them -->
@@ -259,6 +260,7 @@
 
                 <data android:scheme="https" />
                 <data android:scheme="http" />
+                <data android:scheme="duck" />
 
                 <data android:mimeType="text/html" />
                 <data android:mimeType="text/plain" />
@@ -281,6 +283,7 @@
 
                 <data android:scheme="https" />
                 <data android:scheme="http" />
+                <data android:scheme="duck" />
             </intent-filter>
 
         </activity>
