--- a/duckplayer/duckplayer-api/build.gradle
+++ b/duckplayer/duckplayer-api/build.gradle
@@ -15,11 +15,11 @@
  */
 
 plugins {
-    id 'java-library'
-    id 'kotlin'
+    id 'com.android.library'
+    id 'kotlin-android'
 }
 
-apply from: "$rootProject.projectDir/code-formatting.gradle"
+apply from: "$rootProject.projectDir/gradle/android-library.gradle"
 
 java {
     sourceCompatibility = JavaVersion.VERSION_17
@@ -32,4 +32,23 @@ kotlin {
 
 dependencies {
     implementation Kotlin.stdlib.jdk7
+    implementation AndroidX.core.ktx
+    coreLibraryDesugaring Android.tools.desugarJdkLibs
+    implementation project(path: ':common-utils')
+}
+
+
+android {
+    namespace "com.duckduckgo.duckplayer.api"
+    lint {
+        baseline file("lint-baseline.xml")
+    }
+    testOptions {
+        unitTests {
+            includeAndroidResources = true
+        }
+    }
+    compileOptions {
+        coreLibraryDesugaringEnabled = true
+    }
 }
