--- a/app/build.gradle
+++ b/app/build.gradle
@@ -323,6 +323,9 @@ dependencies {
     implementation project(':broken-site-impl')
     implementation project(':broken-site-store')
 
+    implementation project(':performance-metrics-impl')
+    implementation project(':performance-metrics-store')
+
     // Deprecated. TODO: Stop using this artifact.
     implementation "androidx.legacy:legacy-support-v4:_"
     debugImplementation Square.leakCanary.android
