--- a/performance-metrics/performance-metrics-impl/build.gradle
+++ b/performance-metrics/performance-metrics-impl/build.gradle
@@ -18,6 +18,7 @@ plugins {
     id 'com.android.library'
     id 'kotlin-android'
     id 'com.squareup.anvil'
+    id 'com.google.devtools.ksp' version "$ksp_version"
 }
 
 apply from: "$rootProject.projectDir/gradle/android-library.gradle"
@@ -44,6 +45,7 @@ dependencies {
     implementation AndroidX.room.runtime
     implementation AndroidX.room.rxJava2
     implementation AndroidX.room.ktx
+    ksp AndroidX.room.compiler
     testImplementation AndroidX.room.testing
 
     // Dagger
