--- a/.github/workflows/external-ref-tests.yml
+++ b/.github/workflows/external-ref-tests.yml
@@ -39,10 +39,11 @@ jobs:
           java-version: '17'
           distribution: 'adopt'
 
-      - name: JVM tests
+      - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v3
-        with:
-          arguments: jvm_tests
+
+      - name: JVM tests
+        run: ./gradlew jvm_tests
 
       - name: Bundle the JVM checks report
         if: always()
@@ -90,15 +91,14 @@ jobs:
           FLANK: ${{ secrets.FLANK }}
         run: echo $FLANK > flank.json
 
-      - name: Build
+      - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v3
-        with:
-          arguments: androidTestsBuild
+
+      - name: Build
+        run: ./gradlew androidTestsBuild
 
       - name: Run Android Tests
-        uses: gradle/actions/setup-gradle@v3
-        with:
-          arguments: runFlankAndroidTests
+        run: ./gradlew runFlankAndroidTests
 
       - name: Bundle the Android CI tests report
         if: always()
