--- a/.github/workflows/build-debug-apk.yaml
+++ b/.github/workflows/build-debug-apk.yaml
@@ -34,10 +34,11 @@ jobs:
         with:
           go-version: '1.18.3'
 
-      - name: Build
+      - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v3
-        with:
-          arguments: assembleInternalDebug -Pforce-default-variant
+
+      - name: Assemble the project
+        run: ./gradlew assembleInternalDebug -Pforce-default-variant
 
       - name: Obtain debug apk
         if: always()
