--- a/.github/workflows/e2e-nightly-autofill.yml
+++ b/.github/workflows/e2e-nightly-autofill.yml
@@ -44,10 +44,11 @@ jobs:
           fileName: android
           destination-path: $HOME/jenkins_static/com.duckduckgo.mobile.android/
 
-      - name: Assemble APK which does not require auth to use Autofill
+      - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v3
-        with:
-          arguments: assemblePlayRelease -Pautofill-disable-auth-requirement -Pforce-default-variant -x lint
+
+      - name: Assemble APK which does not require auth to use Autofill
+        run: ./gradlew assemblePlayRelease -Pautofill-disable-auth-requirement -Pforce-default-variant -x lint
 
       - name: Move APK to new folder
         if: always()
