--- a/.github/workflows/external-css-tests.yml
+++ b/.github/workflows/external-css-tests.yml
@@ -51,15 +51,14 @@ jobs:
           FLANK: ${{ secrets.FLANK }}
         run: echo $FLANK > flank.json
 
-      - name: Build
+      - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v3
-        with:
-          arguments: androidTestsBuild
+
+      - name: Build
+        run: ./gradlew androidTestsBuild
 
       - name: Run Android Tests
-        uses: gradle/actions/setup-gradle@v3
-        with:
-          arguments: runFlankPrivacyTests
+        run: ./gradlew runFlankPrivacyTests
 
       - name: Bundle the Android CI tests report
         if: always()
