--- a/.github/workflows/privacy-dashboard-end-to-end.yml
+++ b/.github/workflows/privacy-dashboard-end-to-end.yml
@@ -47,10 +47,11 @@ jobs:
           fileName: android
           destination-path: $HOME/jenkins_static/com.duckduckgo.mobile.android/
 
-      - name: Assemble release APK
+      - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v3
-        with:
-          arguments: assemblePlayRelease -Pforce-default-variant
+
+      - name: Assemble the project
+        run: ./gradlew assemblePlayRelease -Pforce-default-variant
 
       - name: Move APK to new folder
         if: always()
